--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f418;
+    background-color: hsla(300, 40%, 22%, 0.685);
     color: #333333;
   }
   body.dark-mode {
-    background-color: rgb(45, 179, 0);
+    background-color: rgba(122, 103, 156, 0.185);
     color: rgb(255, 255, 255);
   }
   
@@ -21,7 +21,7 @@ body {
   
   /* Header */
   header {
-    background-color: #e60092;
+    background-color: #e60096;
     color: #ffffff;
     padding: 20px 0;
   }
@@ -53,7 +53,7 @@ nav ul {
     margin: 20px 0;
     background: #ffffff;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(1, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(92, 222, 174, 0.696);
   }
   
   section h2 {
@@ -75,28 +75,28 @@ nav ul {
   
   .project {
     background: #f9f9f9;
-    border: 1px solid #ddd;
+    border: 1px solid #911876cf;
     padding: 15px;
     border-radius: 8px;
     width: 30%;
     text-align: center;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(138, 27, 175, 0.687);
   }
 .project h3 {
     margin-top: 0;
-    color: #333;
+    color: #b413e5a5;
   }
   
   .project a {
-    color: #0073e6;
+    color: #cf0edca1;
     text-decoration: none;
   }
   
   /* Footer */
   footer {
     text-align: center;
-    background: #00e682;
-    color: #fff;
+    background: #1264ca;
+    color: #31d38884;
     padding: 10px 0;
   }
   
